--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: cards42 - Die Mitmach-Karten für Softwarearchitekt*innen
+title: Cyberization in progress
 ---
 <!doctype html>
 <html lang="de">
