add marquee because we need it!

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@ title: Cyberization in progress
     <header>
     Hier entsteht eine<br>neue Cyber-Website
     </header>
+    <marquee bgcolor=#777777><span style="color:#ffffff">Sichert das Datum: Montag 25.11.2019 20:15 Uhr</span></marquee>
     <main>
     <h1>Es wurden noch keine Inhalte hochgeladen.</h1>
     
-    <p>Wenn Sie der Betreiber dieser Website sind: laden Sie einfach eine Startseite (z.B. <code>index.html</code> oder <code>index.php</code>) auf Ihren Cyber-Space, dann wird diese Meldung nicht mehr angezeigt.</p>
+    <p align="center">Wenn Sie der Betreiber dieser Website sind: laden Sie einfach eine Startseite (z.B. <code>index.html</code> oder <code>index.php</code>) auf Ihren Cyber-Space, dann wird diese Meldung nicht mehr angezeigt.</p>
     
     </main>
     <footer>
