add blink for nostalgic browser users

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Cyberization in progress
 <body>
     
     <header>
-    Hier entsteht eine<br>neue Cyber-Website
+    Hier entsteht eine<br>neue <blink>Cyber</blink>-Website
     </header>
     <marquee bgcolor=#777777><span style="color:#ffffff">Sichert das Datum: Montag 25.11.2019 20:15 Uhr</span></marquee>
     <main>
