--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Cyberization in progress
     <meta charset="utf-8">
     <title>{{page.title}}</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/blink-polyfill.css">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
 
